--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>Weekend Challenge!</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="style.css" media="screen" href="main.css" />
     <script src="jquery-3.3.1.min copy.js"></script>
     <script src="script.js"></script>
 </head>
@@ -26,10 +26,11 @@
             <tr>Annual Salary</tr>
             <tr>DELETE</tr>
         </thead>
-    </table>
+    
 
-    <body>
-    </body>
+    <tbody id= "employeeChart">
+    </tbody>
+</table>
 </main>
 
 </html>
