added delete function

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     </div>
     <table>
         <thead>
-            <tr>First Name</tr>
-            <tr>Last Name</tr>
-            <tr>ID Number</tr>
-            <tr>Job Title</tr>
-            <tr>Annual Salary</tr>
-            <tr>DELETE</tr>
+            <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>ID Number</th>
+            <th>Job Title</th>
+            <th>Annual Salary</th>
+            <th>DELETE</th>
+        </tr>
         </thead>
-    
-
-    <tbody id= "employeeChart">
-    </tbody>
-</table>
+        <tbody id="employeeChart">
+        </tbody>
+    </table>
 </main>
 
 </html>
