added update monthly cost function and red css styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>Weekend Challenge!</title>
-    <link rel="stylesheet" type="style.css" media="screen" href="main.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="jquery-3.3.1.min copy.js"></script>
     <script src="script.js"></script>
 </head>
@@ -31,6 +31,9 @@
         <tbody id="employeeChart">
         </tbody>
     </table>
+    <div>
+<h3 class = "monthlyCost">Monthly Cost:</h3>
+    </div>
 </main>
 
 </html>
