changed style and added final touches and comments

--- a/index.html
+++ b/index.html
@@ -4,40 +4,41 @@
 <head>
 
     <title>Weekend Challenge!</title>
-    <link rel = "stylesheet" href = "bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="jquery-3.3.1.min copy.js"></script>
     <script src="script.js"></script>
 </head>
-<main>
+<body>
     <header>
-        <h1><span class="badge badge-primary">New</span> Employee Salary Manager</h1>
+        <h1>
+            <span class="badge badge-primary">New</span> Employee Salary Manager</h1>
     </header>
-    <div class = "form-group-row">
-        <input  id="firstName" type="text" placeholder="First Name">
-        <input  id="lastName" type="text" placeholder="Last Name">
-        <input  id="numberID" type="text" placeholder="ID Number">
-        <input  id="jobTitle" type="text" placeholder="Job Title">
-        <input  id="annualSalary" type="text" placeholder="Annual Salary">
-        <button class = "btn btn-secondary" id="submit">SUBMIT</button>
+    <div class="form-group-row">
+        <input id="firstName" type="text" placeholder="First Name">
+        <input id="lastName" type="text" placeholder="Last Name">
+        <input id="numberID" type="text" placeholder="ID Number">
+        <input id="jobTitle" type="text" placeholder="Job Title">
+        <input id="annualSalary" type="text" placeholder="Annual Salary">
+        <button class="btn btn-secondary" id="submit">SUBMIT</button>
     </div>
-    <table class= "table table-striped">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>ID Number</th>
-            <th>Job Title</th>
-            <th>Annual Salary</th>
-            <th>DELETE</th>
-        </tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>ID Number</th>
+                <th>Job Title</th>
+                <th>Annual Salary</th>
+                <th>DELETE</th>
+            </tr>
         </thead>
         <tbody id="employeeChart">
         </tbody>
     </table>
-    <div class = "cost">
-<h3 class = "monthlyCost">Monthly Cost:   0</h3>
+    <div class="cost">
+        <h3 class="monthlyCost">Monthly Cost: 0</h3>
     </div>
-</main>
+</body>
 
 </html>
