--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,15 +4,17 @@
 <head>
 
     <title>Weekend Challenge!</title>
-    <link rel="stylesheet" href="bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="jquery-3.3.1.min copy.js"></script>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="vendors/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <script src="vendors/jquery-3.3.1.min copy.js"></script>
+    <script src="scripts/script.js"></script>
 </head>
+
 <body>
     <header>
         <h1>
-            <span class="badge badge-primary">New</span> Employee Salary Manager</h1>
+            <span class="badge badge-primary">New</span> Employee Salary Manager
+        </h1>
     </header>
     <div class="form-group-row">
         <input id="firstName" type="text" placeholder="First Name">
@@ -22,7 +24,7 @@
         <input id="annualSalary" type="text" placeholder="Annual Salary">
         <button class="btn btn-secondary" id="submit">SUBMIT</button>
     </div>
-    <table class="table table-striped table-hover">
+    <table id="target" class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>First Name</th>
